syntax = "proto3";

package pb;
// protoc --go_out=./ --go-grpc_out=./ gateway.proto
option go_package = "./pb";
import "google/protobuf/empty.proto";

message CartItem {
  string productId = 1;
  string title = 2;
  double price = 3;
  string sellerId = 4;
  uint64 quantity = 5;
}

message Cart {
  string cartId = 1;
  repeated CartItem items = 2;
  double totalPrice = 3;
}

message AddToCartRequest {
  string productId = 1;
  uint64 quantity = 2;
}

message RemoveFromCartRequest {
  string productId = 1;
}

message UpdateCartRequest {
  string productId = 1;
  uint64 updatedQuantity = 2;
}

message IssueGuestCartTokenResponse {
  string guestToken = 1;
}

message ValidateGuestCartTokenResponse {
  string guestId = 1;
}

message CartResponse {
  Cart cart = 1;
}

service CartService {
  rpc AddItemToCart(AddToCartRequest) returns (CartResponse) {}
  rpc RemoveItemFromCart(RemoveFromCartRequest) returns (CartResponse) {}
  rpc GetCart(google.protobuf.Empty) returns (CartResponse) {}
  rpc UpdateCart(UpdateCartRequest) returns (CartResponse) {}
  rpc DeleteCart(google.protobuf.Empty) returns (CartResponse) {}
  rpc IssueGuestCartToken(google.protobuf.Empty) returns (IssueGuestCartTokenResponse) {}
  rpc ValidateGuestCartToken(google.protobuf.Empty) returns (ValidateGuestCartTokenResponse) {}
}

